# sioncodes

./: .gitignore  CNAME  README.md
.github/workflows/: deploy.yml  nextjs.yml
blog/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
blog/_posts/: documenting-with-tests.md  fast-postgresql-tests.md  hello-world.md
blog/planned_posts/: types-of-session-management.md
blog/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
blog/src/app/_components/: alert.tsx  date-formatter.tsx  footer.tsx  header.tsx  hero-post.tsx  intro.tsx  markdown-styles.module.css  menu-bar.tsx  more-stories.tsx  post-body.tsx  post-header.tsx  post-title.tsx  sidebar-latest-posts.tsx  switch.module.css  tag-posts-list.tsx
blog/src/app/about/: page.tsx
blog/src/app/posts/[slug]/: page.tsx
blog/src/interfaces/: post.ts
blog/src/lib/: api.ts  url.ts
examples/repository_pattern/: pyproject.toml
examples/repository_pattern/src/: main.py  settings.py
examples/repository_pattern/src/domains/: user.py
examples/repository_pattern/src/repositories/: base_repository.py  factories.py
examples/repository_pattern/src/repositories/local/: base_local_repository.py  user_repository.py
examples/repository_pattern/src/repositories/postgresql/: base_postgresql_repository.py  session.py  user_repository.py
examples/repository_pattern/src/repositories/postgresql/models/: base.py  user.py
examples/repository_pattern/tests/repositories/local/: test_user_repository.py
examples/repository_pattern/tests/repositories/postgresql/: test_user_repository.py
(+1 files in other folders)
