[project]
name = "repository_pattern"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
]

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "testing-postgresql>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
